# cobol-copybook.jsonifier

./: .gitignore  ASCII_BOOK.cob  CHANGELOG.md  MANIFEST.in  README.md  ascii_parser_test.py  parser_tester.py  prepare_teste.py  pyproject.toml  requirements.txt  setup.cfg  setup.lixo
.github/workflows/: python-publish.yml
coboljsonifier/: copybookextractor.py  parser.py
coboljsonifier/config/: parser_type_enum.py
coboljsonifier/extractors/: book_item.py  field_extractor.py
coboljsonifier/fields/: field_alphanumeric_ascii.py  field_alphanumeric_ebcdic.py  field_group.py  field_numeric_ascii.py  field_numeric_binary.py  field_numeric_comp3.py  field_numeric_ebcdic.py  field_numeric_masked_ascii.py  field_wrapper.py
coboljsonifier/tests/test_files/: DATA3_BOOK.txt  DATA3_CONTENT.txt  DT00_NOK_redefines.cob  book_tests_NOK_bad_format.cob  book_tests_NOK_redefines.cob  mock_data_ascii.txt
docs/: COBOL_JSONIFIER.drawio
examples/: EBCDIC_BOOK.cob  README.md  ascii_parser_test.py  book_texas_well_data.cob  ebcdic_parser_test.py  extract_texas_well_data_cbook.py  remove_redefines.py
src/coboljsonifier/: copybookextractor.py  parser.py
src/coboljsonifier.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/coboljsonifier/coboljsonifier.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/coboljsonifier/extractors/: field_extractor.py  structure_extractor.py  subformat_extractor.py
src/coboljsonifier/fields/: field.py  field_array.py  field_numeric_ascii.py  field_numeric_binary.py  field_numeric_comp3.py  field_numeric_ebcdic.py  field_numeric_masked_ascii.py
src/tests/: test_copybook_extractor.py
src/tests/extractors/: test_field_extractor.py
src/tests/fields/: test_field_alphanumeric_ascii.py  test_field_alphanumeric_ebcdic.py  test_numeric_binary.py  test_numeric_comp3.py  test_numeric_ebcdic.py
src/tests/test_files/: DATA1_BOOK.cob
tests/: TESTING.md  test_copybook_extractor.py
tests/extractors/: test_field_extractor.py
tests/fields/: test_field_alphanumeric_ascii.py  test_field_alphanumeric_ebcdic.py  test_numeric_binary.py  test_numeric_comp3.py  test_numeric_ebcdic.py
tests/test_files/: book_tests_NOK_bad_format.cob  book_tests_NOK_binary_greater_18.cob  book_tests_OK.cob  book_texas_well_data.cob
tests/test_files/OLD/: DATA1_EBCDIC.DATA  DATA1_EBCDIC.cob  DATA2.cob  DATA3_BOOK_BODY_ONLY.txt  DATA3_CONTENT.txt  DT00.DATA  EBCDIC_TEST.DATA  book_layout_for_tests_OK.txt
