[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coboljsonifier"
dynamic = ["version"]
description = "Convert cobol copybook to Json and parse data files based on it"
readme = "README.md"
requires-python = ">=3.7"
authors = [
    { name = "Joao Roberto Perin" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/jrperin/cobol-copybook.jsonifier"
# Documentation = "https://readthedocs.org"
# Repository = "https://github.com/me/spam.git"
Issues = "https://github.com/jrperin/cobol-copybook.jsonifier/issues"
# Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

license = {text = "MIT License"}

keywords = ["Cobol", "Json", "Mainframe", "Copybook", "Cobol & JSON"]