[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coboljsonifier"
dynamic = ["version"]
description = "Convert cobol copybook to Json and parse data files based on it"
readme = "README.md"
requires-python = ">=3.7"
authors = [
    { name = "Joao Roberto Perin" }
]
classifiers = [
  "Programming Language :: Python"
]
license = "MIT"
keywords = ["Cobol", "Json", "Mainframe", "Copybook", "Cobol & JSON"]

[project.urls]
Homepage = "https://github.com/jrperin/cobol-copybook.jsonifier"
Issues = "https://github.com/jrperin/cobol-copybook.jsonifier/issues"
