[metadata]
name = coboljsonifier
version = 1.0.7
description = Convert cobol copybook to Json and parse data files based on it
long_description = file: README.md
long_description_content_type = text/markdown
author = Joao Roberto Perin
url= https://github.com/jrperin/cobol-copybook.jsonifier
project_urls =
    Bug Tracker = https://github.com/jrperin/cobol-copybook.jsonifier/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
